--- a/data-validator-core/build.gradle
+++ b/data-validator-core/build.gradle
@@ -7,6 +7,8 @@ java {
         archiveAppendix.set('core')
         dependencies {
             implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+            implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-api', version: '3.2.3'
+            implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-turtle', version: '3.2.3'
         }
     }
 }
