--- a/data-validator-rdf/build.gradle
+++ b/data-validator-rdf/build.gradle
@@ -8,7 +8,9 @@ java {
         dependencies {
             implementation project(":data-validator-core")
             implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+            implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-api', version: '3.2.3'
             implementation group: 'org.apache.jena', name: 'jena-tdb', version: '3.15.0'
+            implementation group: 'org.apache.jena', name: 'jena-shacl', version: '3.15.0'
         }
     }
 }
