--- a/github/action.yml
+++ b/github/action.yml
@@ -7,7 +7,7 @@ inputs:
   path:
     description: 'Path to file or a directory.'
     required: false
-    default: '/github/workspace'
+    default: '$GITHUB_WORKSPACE'
 runs:
   using: 'docker'
   image: '../Dockerfile'
