--- a/github/action.yml
+++ b/github/action.yml
@@ -12,5 +12,5 @@ runs:
   using: 'docker'
   image: '../Dockerfile'
   args:
-    - -c ${{ inputs.configuration }}
-    - -p ${{ inputs.path }}
+    - -c=${{ inputs.configuration }}
+    - -p=${{ inputs.path }}
