--- a/data-validator-xml/build.gradle
+++ b/data-validator-xml/build.gradle
@@ -9,8 +9,8 @@ java {
             implementation project(":data-validator-core")
             implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
             implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-api', version: '3.2.3'
-            implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.1'
-            implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.11.1'
+            implementation group: 'dom4j', name: 'dom4j', version: '1.6.1'
+            // For http://www.w3.org/XML/XMLSchema/v1.1
             implementation group: 'org.opengis.cite.xerces', name: 'xercesImpl-xsd11', version: '2.12-beta-r1667115'
         }
     }
