--- a/data-validator-rdf/build.gradle
+++ b/data-validator-rdf/build.gradle
@@ -12,6 +12,7 @@ java {
             implementation group: 'org.apache.jena', name: 'jena-tdb', version: '3.15.0'
             implementation group: 'org.apache.jena', name: 'jena-shacl', version: '3.15.0'
             implementation group: 'com.apicatalog', name: 'titanium-json-ld', version: '0.8.4'
+            implementation group: 'org.topbraid', name: 'shacl', version: '1.3.2'
             // Required by titanium-json-ld
             implementation group: 'org.glassfish', name: 'jakarta.json', version: '1.1.6'
         }
